force-app/main/default/objects/Mandatory_Report__c/Mandatory_Report__c.object-meta.xml
<CustomObject>
    <description>Audit record of a mandatory report made to APS, DCS, law enforcement, or other authority. ADR-010: audit-only, no approval workflow. Field history tracking on key fields. Reports must not be edited after creation except to add outcome.</description>
    <label>Mandatory Report</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandatory Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>