force-app/main/default/objects/Mandatory_Report__c/fields/About_Contact__c.field-meta.xml
<CustomField>
    <fullName>About_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person the report is ABOUT (the alleged victim, the endangered adult, the child). Optional — if subject is unknown or anonymous, use Subject_Description__c text field instead.</description>
    <label>About (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mandatory Reports About</relationshipLabel>
    <relationshipName>Mandatory_Reports_About</relationshipName>
    <type>Lookup</type>
</CustomField>