force-app/main/default/objects/Mandatory_Report__c/fields/Agency_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Case_Number__c</fullName>
    <description>The case or report number assigned by the receiving agency. Critical for follow-up and audit trail.</description>
    <externalId>true</externalId>
    <label>Agency Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>