force-app/main/default/objects/Mandatory_Report__c/fields/Agency_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Person__c</fullName>
    <description>Name of the intake worker, dispatcher, or contact at the receiving agency (if known).</description>
    <label>Agency Contact Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>