force-app/main/default/objects/Mandatory_Report__c/fields/Agency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Phone__c</fullName>
    <description>Phone number used to make the report.</description>
    <label>Agency Contact Phone</label>
    <type>Phone</type>
</CustomField>