force-app/main/default/objects/Mandatory_Report__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>How the report was made.</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone</fullName><default>true</default><label>Phone Call</label></value>
            <value><fullName>Online Portal</fullName><default>false</default><label>Online Portal</label></value>
            <value><fullName>Fax</fullName><default>false</default><label>Fax</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>In Person</fullName><default>false</default><label>In Person</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>