force-app/main/default/objects/Mandatory_Report__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>What was actually reported to the agency, in the advocate's own words. Should mirror the verbal report made. Useful for legal audit and consistency review.</description>
    <label>Report Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>