force-app/main/default/objects/Mandatory_Report__c/fields/Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Notes__c</fullName>
    <description>Follow-up notes about the agency's response, investigation findings, or final disposition.</description>
    <label>Outcome Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>