force-app/main/default/objects/Mandatory_Report__c/fields/Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Status__c</fullName>
    <description>What the receiving agency did with the report.</description>
    <label>Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Awaiting Response</fullName><default>true</default><label>Reported — Awaiting Response</label></value>
            <value><fullName>Investigation Opened</fullName><default>false</default><label>Investigation Opened</label></value>
            <value><fullName>Screened Out</fullName><default>false</default><label>Screened Out (No Action)</label></value>
            <value><fullName>Substantiated</fullName><default>false</default><label>Substantiated</label></value>
            <value><fullName>Unsubstantiated</fullName><default>false</default><label>Unsubstantiated</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>