force-app/main/default/objects/Mandatory_Report__c/fields/Report_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Report_DateTime__c</fullName>
    <description>When the report was actually made to the authority. Required. This is the legal "time of report" for statutory compliance.</description>
    <label>Report Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>