force-app/main/default/objects/Mandatory_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>The category of mandatory report. APS=Adult Protective Services (endangered adult). DCS=Department of Child Services (child abuse/neglect). Law Enforcement=911, police, sheriff. Other=any other statutorily mandated report.</description>
    <label>Report Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>APS</fullName><default>false</default><label>APS — Adult Protective Services</label></value>
            <value><fullName>DCS</fullName><default>false</default><label>DCS — Department of Child Services</label></value>
            <value><fullName>Law Enforcement</fullName><default>false</default><label>Law Enforcement (911 / Police / Sheriff)</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other Mandated Report</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>