force-app/main/default/objects/Mandatory_Report__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advocate or staff member who made the report. Field is technically optional at the metadata level (Salesforce doesn't allow Restrict/Cascade or default-value on User lookups), but a validation rule enforces presence at save time. A Day 3 record-triggered flow will auto-populate with the current user. Personal legal liability for mandatory reporters attaches to this user.</description>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Mandatory Reports Filed</relationshipLabel>
    <relationshipName>Mandatory_Reports_Filed</relationshipName>
    <type>Lookup</type>
</CustomField>