force-app/main/default/objects/Mandatory_Report__c/fields/Reporting_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Agency_Name__c</fullName>
    <description>The receiving authority (e.g., "Indiana DCS Hotline", "Greenfield Police Department", "Marion County APS").</description>
    <label>Reporting Agency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>