force-app/main/default/objects/Mandatory_Report__c/fields/Subject_Description__c.field-meta.xml
<CustomField>
    <fullName>Subject_Description__c</fullName>
    <description>Free-text description of the report subject when no Contact record exists (e.g., "child seen at intake, name unknown, approximately 4 years old, light brown hair").</description>
    <label>Subject Description (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>