force-app/main/default/objects/Mandatory_Report__c/fields/Triggering_Event__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Event__c</fullName>
    <description>What disclosure or observation prompted this report? (e.g., "Survivor disclosed husband hit 7-year-old daughter the night before. Bruise on child's face visible at intake.")</description>
    <label>Triggering Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>