force-app/main/default/objects/Mandatory_Report__c/fields/Triggering_Hotline_Call__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Hotline_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this report was triggered by content disclosed on a hotline call, link the originating call here.</description>
    <label>Triggering Hotline Call</label>
    <referenceTo>Hotline_Call__c</referenceTo>
    <relationshipLabel>Mandatory Reports Triggered</relationshipLabel>
    <relationshipName>Mandatory_Reports_Triggered</relationshipName>
    <type>Lookup</type>
</CustomField>