force-app/main/default/objects/Mandatory_Report__c/fields/Triggering_Intake__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this report was triggered by content disclosed during an intake, link the originating Intake here.</description>
    <label>Triggering Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Mandatory Reports Triggered</relationshipLabel>
    <relationshipName>Mandatory_Reports_Triggered</relationshipName>
    <type>Lookup</type>
</CustomField>