force-app/main/default/objects/Mandatory_Report__c/listViews/All_Reports_This_Year.listView-meta.xml
<ListView>
    <fullName>All_Reports_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Report_Type__c</columns>
    <columns>Report_DateTime__c</columns>
    <columns>About_Contact__c</columns>
    <columns>Reporting_Agency_Name__c</columns>
    <columns>Outcome_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Report_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>All Reports This Year</label>
</ListView>