force-app/main/default/objects/Mandatory_Report__c/listViews/Awaiting_Response.listView-meta.xml
<ListView>
    <fullName>Awaiting_Response</fullName>
    <columns>NAME</columns>
    <columns>Report_Type__c</columns>
    <columns>Report_DateTime__c</columns>
    <columns>About_Contact__c</columns>
    <columns>Reporting_Agency_Name__c</columns>
    <columns>Outcome_Status__c</columns>
    <columns>Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Response</value>
    </filters>
    <label>Reports Awaiting Agency Response</label>
</ListView>